--- a/design/compass/_reset.scss
+++ b/design/compass/_reset.scss
@@ -17,7 +17,7 @@ pony, everypony, letter, magic {
   margin: 0;
   padding: 0;
   border: 0;
-  font: inherit;
+  // font: inherit;
   font-size: 100%;
   vertical-align: baseline; }
 
