Update fork us link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="container">
-        <i class="icon-cc"></i> 2014 <a href="http://movies.netflix.com/WiMovie/Bronies/70297884" target="_blank" class="underline">The Bronies.</a> Fork us on <a href="http://github.com/PonyDev/PonyDev.github.com" target="_blank" class="underline">GitHub!</a>
+        <i class="icon-cc"></i> 2014 <a href="http://movies.netflix.com/WiMovie/Bronies/70297884" target="_blank" class="underline">The Bronies.</a> Fork us on <a href="https://github.com/ponydevs/ponydevs.github.io" target="_blank" class="underline">GitHub!</a>
         <div class="right"><a href="#top"><i class="icon-colt-fu"></i> Back to Top</a></div>
     </div>
 </footer>
