--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,10 +3,11 @@
   <menu role="navigation" class="container">
     <a href="/" data-toggle="menu" class="orb"><i class="icon-rows"></i></a>
     <a href="/" class="logo">PonyDev</a>
-    <a href="/sites">SITES</a>
-    <a href="/apps">APPS</a>
-    <a href="/people">PEOPLE</a>
-    <a href="/blog">BLOG</a>
+    <a href="/sites">Sites</a>
+    <a href="/apps">Apps</a>
+    <a href="/startups">Startups</a>
+    <a href="/people">Ponies</a>
+    <a href="/blog">Blog</a>
   </menu>
   <menu role="sidebar" class="sidebar">
     Your unique psuedonym is: <a href="http:" id="google" class="brand"><span class="firstname">Classy</span> <span class="lastname">Hooves</span></a>
