--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,10 +7,11 @@
 
 {% include navigation.html %}
 
-<header>
-  <div class="container">
+<header class="{% if page.cover %}cover{% endif %}" style="{% if page.cover %}background-image:url({{ page.cover }});{% endif %}">
+  <div class="{% if page.cover %}container skrollable" data-0="opacity: 1" data-300="opacity:0.22{% endif %}">
     <h1>{{ page.title }}</h1>
-    <p class="meta">{% if post.author %} <i class="icon-board"><span class="screen-reader">written</span></i> by <a href="/person/{{ post.author }}">{{ post.author }}</a> {% endif %}<i class="icon-event"><span class="screen-reader">posted</span></i> on <span>{{ post.date | date_to_string }}</span></p>
+    <a href="{{ post.url }}" class="title">{{ page.title }}</a>
+    <div class="meta">{% if page.author %} <i class="icon-board"><span class="screen-reader">written</span></i> by <a href="/pony/{{ page.author }}">{{ page.author }}</a>{% endif %} <i class="icon-event"><span class="screen-reader">posted</span></i> on <span>{{ page.date | date_to_string }}</span></div>
   </div>
 </header>
 <section id="content">
@@ -19,7 +20,26 @@
     <article class="post">
     {{ content }}
     </article>
+  
+  </div>
+</section>
 
+<section id="comments">
+  <div class="container">
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'ponydevs'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
   </div>
 </section>
 
