--- a/design/mane.css
+++ b/design/mane.css
@@ -3258,7 +3258,7 @@ a {
   .underline:hover, header.cover a:hover {
     border-bottom: 1px solid; }
 
-.transition, ::-webkit-scrollbar-thumb {
+.transition, ::-webkit-scrollbar-thumb, a.down {
   transition: all .25s ease;
   -webkit-transition: all .25s ease; }
 
@@ -3282,13 +3282,46 @@ header {
   text-align: center;
   padding: 130px 0 80px 0; }
   header.cover {
-    color: white; }
+    color: white;
+    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5); }
+    header.cover:after {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      content: '';
+      background: rgba(0, 0, 0, 0.3); }
     header.cover a {
       color: white; }
+  header .container {
+    position: relative;
+    z-index: 1; }
+
+a.down {
+  color: white;
+  line-height: 35px;
+  height: 50px;
+  width: 50px;
+  display: inline-block;
+  border-radius: 200px !important;
+  border: 4px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 4px solid rgba(255, 255, 255, 0.2) !important;
+  font-size: 30px;
+  margin-top: 40px;
+  margin-bottom: -20px; }
+  a.down:hover {
+    line-height: 50px;
+    background: rgba(0, 0, 0, 0.5);
+    border: 4px solid rgba(255, 255, 255, 0.5);
+    border-bottom: 4px solid rgba(255, 255, 255, 0.5) !important; }
 
 #placeholder {
   color: white;
   background: #1e98d3; }
+
+article.post {
+  padding: 40px 0px; }
 
 ul.posts li {
   background: white;
