--- a/design/mane.scss
+++ b/design/mane.scss
@@ -90,10 +90,45 @@ header {
   padding: 130px 0 80px 0;
   &.cover {
     color: white;
+    text-shadow: 0px 0px 4px rgba(0,0,0,.5);
+    &:after {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      content: '';
+      background: rgba(0,0,0,.3);
+    }
     a {
       color: white;
       @extend .underline;
     }
+  }
+  .container {
+    position: relative;
+    z-index: 1;
+  }
+}
+
+a.down {
+  color: rgb(255, 255, 255);
+  line-height: 35px;
+  height: 50px;
+  width: 50px;
+  display: inline-block;
+  border-radius: 200px!important;
+  border: 4px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 4px solid rgba(255, 255, 255, 0.2)!important;
+  font-size: 30px;
+  margin-top: 40px;
+  margin-bottom: -20px;
+  @extend .transition;
+  &:hover {
+    line-height: 50px;
+    background: rgba(0, 0, 0, 0.5);
+    border: 4px solid rgba(255, 255, 255, 0.5);
+    border-bottom: 4px solid rgba(255, 255, 255, 0.5)!important;
   }
 }
 
@@ -103,6 +138,10 @@ header {
 }
 
 // Sections
+
+article.post {
+  padding: 40px 0px;
+}
 
 // Blog Overview
 ul.posts {
