PonyDevs, not PonyDev

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
 <nav>
   <menu role="navigation" class="container">
     <a href="/" data-toggle="menu" class="orb"><i class="icon-rows"></i></a>
-    <a href="/" class="logo">PonyDev</a>
+    <a href="/" class="logo">PonyDevs</a>
     <a href="/sites">Sites</a>
     <a href="/apps">Apps</a>
     <a href="/startups">Startups</a>
